--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,9 +2,9 @@ name: Build Limbo_Tensor APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
