--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-
+      
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '17' }
+      - run: $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+      
       - name: Install Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -28,6 +26,11 @@ jobs:
 
       - name: Grant Gradle execute permission
         run: chmod +x gradlew
+
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '11', cache: gradle }
+      - run: ./gradlew build
+
 
       - name: Build Debug APK
         run: ./gradlew assembleDebug --stacktrace
